yamls/clusternetworkpolicy-80.yaml
apiVersion: networking.k8s.aws/v1alpha1
kind: ClusterNetworkPolicy
metadata:
  name: allow-all-to-from-dns
spec:
  priority: 80
  tier: Admin
  subject:
    pods:
      namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: default
      podSelector:
        matchLabels:
          app: nginx1
          environment: qa
          role: db
  ingress:
    - name: ig1
      action: Accept
      from:
        - pods:
            namespaceSelector:
              matchLabels:
                kubernetes.io/metadata.name: kube-system
            podSelector:
              matchLabels:
                k8s-app: kube-dns
      ports:
        - portNumber:
            protocol: UDP
            port: 53
        - portNumber:
            protocol: TCP
            port: 53
  egress:
    - name: eg1
      action: Accept
      to:
        - pods:
            namespaceSelector:
              matchLabels:
                kubernetes.io/metadata.name: kube-system
            podSelector:
              matchLabels:
                k8s-app: kube-dns
      ports:
        - portNumber:
            protocol: UDP
            port: 53
        - portNumber:
            protocol: TCP
            port: 53
